--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/google_benchmark_vendor
-	previous = 
-	base = 36f0664
+	previous = 36f0664
+	base = 8140c08
 	trim = 
 	trimbase = 
