--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/google_benchmark_vendor
-	previous = 
-	base = 1668315
+	previous = 1668315
+	base = 4d50b1a
 	trim = 
 	trimbase = 
