--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/google_benchmark_vendor
-	previous = 
-	base = 9532061
+	previous = 9532061
+	base = bd1971b
 	trim = 
 	trimbase = 
