--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/google_benchmark_vendor
-	previous = 
-	base = 971ab16
+	previous = 971ab16
+	base = 625a123
 	trim = 
 	trimbase = 
