--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/google_benchmark_vendor
-	previous = 
-	base = 3c9f3c6
+	previous = 3c9f3c6
+	base = 5041323
 	trim = 
 	trimbase = 
