--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/google_benchmark_vendor
-	previous = 
-	base = 1fa586c
+	previous = 1fa586c
+	base = 012c9c0
 	trim = 
 	trimbase = 
