--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/google_benchmark_vendor
-	previous = 
-	base = dba014e
+	previous = dba014e
+	base = ea18d90
 	trim = 
 	trimbase = 
