--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.5-1": ["Thu Mar 18 2021", "Michel Hidalgo", "michel@ekumenlabs.com"], "0.0.4-1": ["Mon Mar 08 2021", "Michel Hidalgo", "michel@ekumenlabs.com"]}
+{"0.0.6-1": ["Mon Apr 12 2021", "Michel Hidalgo", "michel@ekumenlabs.com"], "0.0.5-1": ["Thu Mar 18 2021", "Michel Hidalgo", "michel@ekumenlabs.com"], "0.0.4-1": ["Mon Mar 08 2021", "Michel Hidalgo", "michel@ekumenlabs.com"]}
