--- a/tracks.yaml
+++ b/tracks.yaml
@@ -49,8 +49,7 @@ tracks:
     ros_distro: galactic
     vcs_type: git
     vcs_uri: https://github.com/ament/google_benchmark_vendor.git
-    version: 0.0.6
-    version_saved: :{auto}
+    version: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
