Update rolling track to release exactly last-released version.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -75,4 +75,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ament/google_benchmark_vendor.git
-    version: :{auto}
+    version: 0.0.7
+    version_saved: :{auto}
