--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/google_benchmark_vendor
-	previous = 
-	base = 66a4c54
+	previous = 66a4c54
+	base = 5df277a
 	trim = 
 	trimbase = 
