--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/google_benchmark_vendor
-	previous = 
-	base = 6cb0ec6
+	previous = 6cb0ec6
+	base = 754987b
 	trim = 
 	trimbase = 
