--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/google_benchmark_vendor
-	previous = 
-	base = ed8658f
+	previous = ed8658f
+	base = 51e56a2
 	trim = 
 	trimbase = 
