--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/google_benchmark_vendor
-	previous = 
-	base = 8fe9681
+	previous = 8fe9681
+	base = 43a95f3
 	trim = 
 	trimbase = 
