--- a/package.xml
+++ b/package.xml
@@ -2,15 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>google_benchmark_vendor</name>
-  <version>0.2.0</version>
+  <version>0.3.0</version>
   <description>This package provides Google Benchmark.</description>
 
-  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
+  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
 
   <license>Apache License 2.0</license>  <!-- Both this package and Google Benchmark are ASL 2.0 -->
 
   <url type="website">https://github.com/google/benchmark</url>
 
+  <author email="audrow@openrobotics.org">Audrow Nash</author>
   <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
   <author email="scott@openrobotics.org">Scott K Logan</author>
 
