--- a/tracks.yaml
+++ b/tracks.yaml
@@ -101,5 +101,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ament/google_benchmark_vendor.git
-    version: 0.3.0
-    version_saved: :{auto}
+    version: :{auto}
