--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/google_benchmark_vendor
-	previous = 
-	base = f34f3c7
+	previous = f34f3c7
+	base = 2ab687f
 	trim = 
 	trimbase = 
