--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/google_benchmark_vendor
-	previous = 
-	base = 162961a
+	previous = 162961a
+	base = 7b55746
 	trim = 
 	trimbase = 
