--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/google_benchmark_vendor
-	previous = 
-	base = 3f1300c
+	previous = 3f1300c
+	base = 86a41fd
 	trim = 
 	trimbase = 
